--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>New Note</h1>
+<h1>Edit Page</h1>
 <%= form_for @note do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
 
   <%= f.label :content %>
-  <%= f.text_field :content %>
+  <%= f.text_area :content %>
 
   <%= f.submit %>
 <% end %>
