--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Notes#index</h1>
-<p>Find me in app/views/notes/index.html.erb</p>
+<h1>Post It Notes</h1>
+<% @notes.each do |note| %>
+  <h2><%= note.title %></h2>
+  <h3><%= note.content %></h3>
+  <%= link_to 'View Note', note_path(note) %>
+  <%= link_to 'Edit Note', edit_note_path(note) %>
+  <%= link_to 'Delete', note, method: :delete %>
+<% end %>
+<br />
+<%= link_to 'New Note', new_note_path %>
