--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,5 +3,6 @@
     <li><%= link_to 'Home', root_path %></li>
     <li><%= link_to 'All Notes', notes_path %></li>
     <li><%= link_to 'New Note', new_note_path %></li>
+    <li><%= link_to 'About', about_path %></li>
   </ul>
 </nav>
